--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   	<dependency>
       <groupId>eu.clarin.sru.fcs</groupId>
       <artifactId>fcs-simple-endpoint</artifactId>
-      <version>1.3.0-SNAPSHOT</version>
+      <version>1.3.0</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -67,13 +67,14 @@
     	<artifactId>org.apache.commons.lang</artifactId>
     	<version>2.6</version>
     </dependency>
-  </dependencies>
-  
-  <repositories>
+  </dependencies> 
+ 
+  <!-- <repositories>
     <repository>
-      <id>clarin</id>
+      <id>CLARIN</id>
+      <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
       <url>http://catalog.clarin.eu/ds/nexus/content/repositories/Clarin/</url>
       <layout>default</layout>
-    </repository>
-  </repositories>
+    </repository>   
+  </repositories> -->
 </project>
