--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,14 @@
         <param-name>eu.clarin.sru.server.utils.sruServerSearchEngineClass</param-name>
         <param-value>de.mannheim.ids.korap.sru.KorapSRU</param-value>
     </init-param>
+    <init-param>
+    	<param-name>eu.clarin.sru.server.legacyNamespaceMode</param-name>
+    	<param-value>loc</param-value>
+    </init-param>
+    <!-- <init-param>
+    	<param-name>eu.clarin.sru.server.sruSupportedVersionMax</param-name>
+    	<param-value>2.0</param-value>
+    </init-param> -->
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
