Added supported layers in the endpoint description.
Change-Id: I3cde116b5c21003a91d3bb14f0e10dd8a87a252d

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
   <repositories>
     <repository>
       <id>CLARIN</id>
+      <name>CLARIN Repository</name>
       <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
       <!-- <url>http://catalog.clarin.eu/ds/nexus/content/repositories/Clarin/</url> -->
       <layout>default</layout>
