Added supported layers in the endpoint description.
Change-Id: I3cde116b5c21003a91d3bb14f0e10dd8a87a252d

--- a/pom.xml
+++ b/pom.xml
@@ -66,15 +66,17 @@
     	<groupId>org.apache.directory.studio</groupId>
     	<artifactId>org.apache.commons.lang</artifactId>
     	<version>2.6</version>
-    </dependency>
+    </dependency>   
   </dependencies> 
  
-  <!-- <repositories>
+  <repositories>
     <repository>
-      <id>CLARIN</id>
-      <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
-      <url>http://catalog.clarin.eu/ds/nexus/content/repositories/Clarin/</url>
-      <layout>default</layout>
-    </repository>   
-  </repositories> -->
+			<id>CLARIN</id>
+			<name>CLARIN Repository</name>
+			<url>https://nexus.clarin.eu/content/repositories/Clarin</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+  </repositories>
 </project>
