Activated CLARIN nexus repository.
Change-Id: I59884ef8c2fff2668a86f0362af7dc7189b79a98

--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,12 @@
     </dependency>
   </dependencies> 
  
-  <!-- <repositories>
+  <repositories>
     <repository>
       <id>CLARIN</id>
       <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
-      <url>http://catalog.clarin.eu/ds/nexus/content/repositories/Clarin/</url>
+      <!-- <url>http://catalog.clarin.eu/ds/nexus/content/repositories/Clarin/</url> -->
       <layout>default</layout>
     </repository>   
-  </repositories> -->
+  </repositories>
 </project>
