Updated readme regarding the configuration file.
Change-Id: I672b3911ea1c045fff980bbd23ecc3542759701e

--- a/src/main/resources/kustvakt.conf
+++ b/src/main/resources/kustvakt.conf
@@ -1,5 +1,4 @@
 # KorAP configuration file that is also used in Krill and Kustvakt.
 
 # Configuration for KorapSRU
-korapsru.client.service.uri=http://localhost:8089/api/v0.1/
-#korapsru.client.service.uri=http://10.0.10.13:7070/api/v0.1/
+korapsru.client.service.uri = [KUSTVAKT SERVER SERVICE URI]
