Added metadata (total results) to KorapResult.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .classpath
 .project
 .settings
-<<<<<<< HEAD
-/target
-=======
-/target
->>>>>>> branch 'dev' of ssh://margaretha@korap.ids-mannheim.de:29418/KorAP/KorapSRU
+target
+
