Added setting KorAP base service URI from web.xml
Change-Id: I991e403cb56bf89b6fcc57e7a4fa28ef35b01282

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,10 @@
     <servlet-name>KorapSRU</servlet-name>
     <servlet-class>eu.clarin.sru.server.utils.SRUServerServlet</servlet-class>
     <init-param>
+        <param-name>korap.service.uri</param-name>
+        <param-value>http://10.0.10.52:9000/api/</param-value>
+    </init-param>
+    <init-param>
         <param-name>eu.clarin.sru.server.numberOfRecords</param-name>
         <param-value>25</param-value>
     </init-param>
