Updated readme and removed KorAP URI configuration via kustvakt.conf.
Change-Id: I908f02ed1ed8d71acd6e497bc292885a915dfdcc

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<context-param>
 		<param-name>korap.service.uri</param-name>
-		<param-value>http://10.0.10.52:9000/api/</param-value>
+		<param-value>http://localhost:8089/api/</param-value>
 	</context-param>
 
 	<servlet>
@@ -53,6 +53,10 @@
 		<init-param>
 			<param-name>eu.clarin.sru.server.legacyNamespaceMode</param-name>
 			<param-value>loc</param-value>
+		</init-param>
+		<init-param>
+			<param-name>eu.clarin.sru.server.sruSupportedVersionDefault</param-name>
+			<param-value>2.0</param-value>
 		</init-param>
 		<init-param>
 			<param-name>eu.clarin.sru.server.sruSupportedVersionMax</param-name>
