--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,7 +74,7 @@
 		<jsp-file>/_redirect.jsp</jsp-file>
 		<init-param>
 			<param-name>korapWebUrl</param-name>
-			<param-value>http://korap.ids-mannheim.de</param-value>
+			<param-value>https://korap.ids-mannheim.de</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
