--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -23,7 +23,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.22.2</version>
 				<configuration>
 					<excludes>
 						<exclude>de/ids_mannheim/korap/test/*.java</exclude>
@@ -36,6 +36,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jersey.version>1.19.4</jersey.version>
+    <slf4j.version>1.7.30</slf4j.version>
 	</properties>
 
 	<dependencies>
@@ -65,17 +66,17 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>[2.9.9,)</version>
+			<version>2.11.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.29</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
-	        <groupId>org.slf4j</groupId>
-	        <artifactId>slf4j-jdk14</artifactId>
-	        <version>1.7.29</version>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-jdk14</artifactId>
+	    <version>${slf4j.version}</version>
 	    </dependency>
 		<dependency>
 			<groupId>org.apache.directory.studio</groupId>
