--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,8 @@
 
 	<context-param>
 		<param-name>korap.service.uri</param-name>
-		<param-value>http://localhost:8089/api/v1.0/</param-value>
+		<!-- <param-value>http://localhost:8089/api/v1.0/</param-value> -->
+		<param-value>https://korap.ids-mannheim.de/api/v1.0</param-value>
 	</context-param>
 
 	<servlet>
