Add cache for virtual corpus access (#63).
Change-Id: I2b8ccc1602e12748d33f01791466f34b1abc6caf

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	<context-param>
 		<param-name>korap.api.uri</param-name>
 		<!-- <param-value>http://localhost:8089/api/v1.0/</param-value> -->
-		<param-value>https://korap.ids-mannheim.de/api/v1.0</param-value>
+		<param-value>https://korap.ids-mannheim.de/instance/test/api/v1.0</param-value>
 	</context-param>
 	<context-param>
 		<param-name>korap.web.uri</param-name>
